Template com 2 menus configurado

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <a href="#/" class="navbar-brand">Logo</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
@@ -14,7 +14,6 @@
         <li><a ng-href="#/processo">Adicionar Processo</a></li>
         <li><a ng-href="#/relatorios">Relatórios</a></li>
       </ul>
-
     </div>
   </div>
 </div>
