--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="page-header">
     <div>
-      <acme-navbar creation-date="main.creationDate"></acme-navbar>
+      <acme-navbar></acme-navbar>
     </div>
 
     <div class="jumbotron text-center">
