--- a/src/app/relatorios/relatorios.html
+++ b/src/app/relatorios/relatorios.html
@@ -1,11 +1,16 @@
-<div class="container">
-  <div class="page-header">
-    <div>
-      <acme-navbar></acme-navbar>
-    </div>
 
-    <div class="jumbotron text-center">
-      <h1>Relatórios</h1>
+  <acme-navbar></acme-navbar>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-2 col-sm-3 col-lg-3 sidebar">
+        <acme-nav></acme-nav>
+      </div>
+
+      <div class="col-md-9 col-sm-9 main">
+          <div>
+            <h1 class="page-header">Relatórios</h1>
+          </div>
+      </div>
     </div>
   </div>
-</div>
