--- a/src/app/theme/bootstrap-cosmo.scss
+++ b/src/app/theme/bootstrap-cosmo.scss
@@ -1415,6 +1415,7 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 9.5px;
   margin: 42px 0 21px;
+  border-bottom: 1px solid #eee;
 }
 ul,
 ol {
