Carregando dados via JSON

--- a/src/app/relatorio/relatorio.html
+++ b/src/app/relatorio/relatorio.html
@@ -9,7 +9,7 @@
 
       <div class="col-md-9 col-sm-9 main">
           <div>
-            <h1 class="page-header">Relatórios</h1>
+            <h1 class="page-header">Relatório</h1>
           </div>
       </div>
     </div>
