--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
+  <li class="list-group-item"><a ng-href="#/relatorio">Relatório</a></li>
   <li class="list-group-item"><a ng-href="#/processos">Processos</a></li>
   <li class="list-group-item"><a ng-href="#/processo">Adicionar Processo</a></li>
-  <li class="list-group-item"><a ng-href="#/relatorios">Relatórios</a></li>
 </ul>
