--- a/src/app/processos/processos.html
+++ b/src/app/processos/processos.html
@@ -11,6 +11,13 @@
           <div>
             <h1 class="page-header">Processos</h1>
           </div>
+
+          <div class="row">
+            <div class="col-sm-6 col-md-4" ng-repeat="listaProcesso in processos.listaProcessos">
+                <p>{{ listaProcesso.uf }}</p>
+            </div>
+          </div>
       </div>
+
     </div>
   </div>
