--- a/src/app/relatorio/relatorio.html
+++ b/src/app/relatorio/relatorio.html
@@ -11,6 +11,12 @@
           <div>
             <h1 class="page-header">Relatório</h1>
           </div>
+
+          <!-- <div class="row">
+            <div class="col-sm-6 col-md-4" ng-repeat="listaRelatorio in relatorio.listaRelatorios">
+                <p>{{ listaRelatorio.valor }}</p>
+            </div>
+          </div> -->
       </div>
     </div>
   </div>
