--- a/src/app/relatorio/relatorio.html
+++ b/src/app/relatorio/relatorio.html
@@ -17,6 +17,10 @@
                 <p>{{ listaRelatorio.valor }}</p>
             </div>
           </div> -->
+
+          <!-- <div ng-controller="RelatorioController">
+              <nvd3 options="options" data="data"></nvd3>
+          </div> -->
       </div>
     </div>
   </div>
