--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -10,7 +10,7 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li><a ng-href="#/relatorio">Relatório</a></li>
+        <li><a ng-href="#/">Dashboard</a></li>
         <li><a ng-href="#/processos">Processos</a></li>
         <li><a ng-href="#/processo">Adicionar Processo</a></li>
       </ul>
